--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,10 @@
       src="https://kit.fontawesome.com/af9f6ae742.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/af9f6ae742.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body></body>
