--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mandy Savoie | Freelance writer/editor/web developer</title>
+    <title>Mandy Savoie | Journalist/web developer</title>
     <meta
       name="description"
       content="Mandy Savoie is a Canadian-based freelance magazine writer, editor, fact-checker and front-end developer. Check out her website to learn more."
