--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mandy Savoie's Work | Freelance writer/editor/web developer</title>
+    <title>Mandy Savoie's Work | Journalist/web developer</title>
     <meta
       name="description"
       content="Check out examples of Mandy Savoie's writing and web development."
@@ -21,10 +21,6 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/style/style.css" />
-    <script
-      src="https://kit.fontawesome.com/af9f6ae742.js"
-      crossorigin="anonymous"
-    ></script>
     <script
       src="https://kit.fontawesome.com/af9f6ae742.js"
       crossorigin="anonymous"
