--- a/index.html
+++ b/index.html
@@ -25,8 +25,18 @@
       src="https://kit.fontawesome.com/af9f6ae742.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="border rounded">HELLO</div>
+    <div class="hero">
+      <h1>Mandy Savoie</h1>
+      <h3>Freelance writer + editor + fact-checker + front-end developer</h3>
+      <h4>Based in New Brunswick, Canada</h4>
+    </div>
   </body>
 </html>
