--- a/work.html
+++ b/work.html
@@ -25,6 +25,12 @@
       src="https://kit.fontawesome.com/af9f6ae742.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body></body>
 </html>
