--- a/index.html
+++ b/index.html
@@ -38,5 +38,57 @@
       <h3>Freelance writer + editor + fact-checker + front-end developer</h3>
       <h4>Based in New Brunswick, Canada</h4>
     </div>
+
+    <div class="about">
+      <h2>About Me</h2>
+    </div>
+
+    <div class="contact">
+      <h2>Contact Me</h2>
+      <p>
+        Get in touch:
+        <br />
+        <a class="email" href="mailto:mandysavoie@gmail.com"
+          >mandysavoie@gmail.com</a
+        >
+      </p>
+
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-3 contact-icon">
+            <a
+              class="icon"
+              target="_blank"
+              href="https://www.instagram.com/mansavytravels/"
+            >
+              <i class="fa-brands fa-instagram-square fa-2x"></i>
+            </a>
+          </div>
+          <div class="col-3 contact-icon">
+            <a
+              class="icon"
+              target="_blank"
+              href="https://twitter.com/mandysavoie"
+              ><i class="fa-brands fa-twitter-square fa-2x"></i
+            ></a>
+          </div>
+          <div class="col-3 contact-icon">
+            <a
+              class="icon"
+              target="_blank"
+              href="https://www.linkedin.com/in/mansavy/"
+              ><i class="fa-brands fa-linkedin fa-2x"></i
+            ></a>
+          </div>
+          <div class="col-3 contact-icon">
+            <a class="icon" target="_blank" href="https://github.com/mansavy"
+              ><i class="fa-brands fa-github-square fa-2x"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer>Copyright 2022 Mandy Savoie</footer>
   </body>
 </html>
