Added about section

--- a/index.html
+++ b/index.html
@@ -40,8 +40,48 @@
     </div>
 
     <div class="about">
-      <h2>About Me</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <img
+              class="bio-pic img-fluid pt-3 pb-3"
+              alt="Mandy Savoie headshot"
+              src="/Photos/mandy.jpg"
+            />
+          </div>
+          <div class="col-lg-6">
+            <h2 class="about-heading pt-3">About Mandy</h2>
+            <div class="about-blurb">
+            <p>
+              I’m a freelance writer, editor and fact-checker based in Moncton,
+              New Brunswick, Canada. I write about travel, food and music. I’ve
+              also recently started working as a front-end web developer. <br /></p>
+              <p>My bylines include <i>WestJet Magazine</i>,
+              <i>Canadian Geographic Magazine</i>, mental_floss.com and more.
+              I've fact-checking magazines like <i>OnBoard</i>,
+              <i>This Magazine</i>, <i>Dementia Connections</i>,
+              <i>Leap Magazine</i> and others.
+            </p>
+            <p>
+              In my spare time, I write short fiction. I’ve been long-listed
+              twice in the Australian Writers’ Centre’s Furious Fiction
+              competition. I was also a finalist in NYC Midnight’s 2021 micro-fiction
+              contest. <br /></p>
+
+              <p>I have a combined honours degree in Journalism and Music History
+              from the University of King’s College in Halifax, Nova Scotia.
+              <br /></p>
+                  <p>
+              When I’m not working, I’m likely travelling, baking, coding,
+              kickboxing or listening to new wave.</p>
+            </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <div class="work">WORK</div>
 
     <div class="contact">
       <h2>Contact Me</h2>
