--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -56,7 +57,7 @@
               I’m a freelance writer, editor and fact-checker based in Moncton,
               New Brunswick, Canada. I write about travel, food and music. I’ve
               also recently started working as a front-end web developer. <br /></p>
-              <p>My bylines include <i>WestJet Magazine</i>,
+              <p>Bylines include <i>WestJet Magazine</i>,
               <i>Canadian Geographic Magazine</i>, mental_floss.com and more.
               I've fact-checking magazines like <i>OnBoard</i>,
               <i>This Magazine</i>, <i>Dementia Connections</i>,
@@ -72,7 +73,7 @@
               from the University of King’s College in Halifax, Nova Scotia.
               <br /></p>
                   <p>
-              When I’m not working, I’m likely travelling, baking, coding,
+              When I’m not working, I’m travelling, baking, coding,
               kickboxing or listening to new wave.</p>
             </p>
             </div>
@@ -81,7 +82,36 @@
       </div>
     </div>
 
-    <div class="work">WORK</div>
+    <div class="work">
+
+<div id="carouselExampleIndicators carousel" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="/Photos/weather.png" class="d-block w-100" alt="New Wave Weather App">
+    </div>
+    <div class="carousel-item">
+      <img src="" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+    </div>
 
     <div class="contact">
       <h2>Contact Me</h2>
