--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6 mb-5">
 
    <h3>Journalism Work</h3>
-
+<br />
 <div id="carouselExampleIndicators carousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -118,8 +118,8 @@
   </button>
 </div>
 </div>
-<div class="col-lg-6">
-  <h3>Front-end web development work</h3>
+<div class="col-lg-6 mb-5">
+  <h3>Web development work</h3><br/>
 
 <div id="carouselExampleIndicators carousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
