--- a/index.html
+++ b/index.html
@@ -82,44 +82,51 @@
       </div>
     </div>
 
-    <div class="work">
+    <div class="writing-work">
+         <h3>Journalism Work</h3>
+
+         <div class="container">
+           <div class="row">
+             <div class="col-lg-4 mb-5">
+<div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
+            </div>
+<div class="col-lg-4 mb-5">
+<div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+</div>
+
+<div class="col-lg-4 mb-5">
+  <div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+</div>
+         </div>
+      </div>
+      </div>
    
+<div class="web-work">
 
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 mb-5">
 
-   <h3>Journalism Work</h3>
-<br />
-<div id="carouselExampleIndicators carousel" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-    <a href="https://sharp-minsky-ace9cf.netlify.app" target="_blank"><img src="/Photos/weather.png" class="d-block w-100" alt="New Wave Weather App"></a>
-    </div>
-    <div class="carousel-item">
-      <a href="https://heroic-fudge-9f13ea.netlify.app" target="_blank"> <img src="/Photos/whale.png" class="d-block w-100" alt="Atlantic Canada Project"></a>
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-</div>
-<div class="col-lg-6 mb-5">
-  <h3>Web development work</h3><br/>
+  <h3>Web development work</h3>
 
 <div id="carouselExampleIndicators carousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
@@ -148,9 +155,8 @@
   </button>
 </div>
 </div>
-     </div>
-    </div>
-</div>
+
+
     <div class="contact">
       <h2>Contact Me</h2>
       <p>
