--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mandy Savoie | Journalist/web developer</title>
     <meta
       name="description"
-      content="Mandy Savoie is a Canadian-based freelance magazine writer, editor, fact-checker and front-end developer. Check out her website to learn more."
+      content="Mandy Savoie is a Canada-based freelance magazine writer, editor, fact-checker and front-end developer. Check out her website to learn more."
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -15,12 +15,12 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    
-    <script
+     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    
     <link rel="stylesheet" href="/style/style.css" />
     <script
       src="https://kit.fontawesome.com/af9f6ae742.js"
@@ -93,7 +93,7 @@
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+  
   </div>
 </div>
 
@@ -104,7 +104,7 @@
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+
   </div>
 </div>
 </div>
@@ -115,7 +115,7 @@
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+ 
   </div>
 </div>
 </div>
@@ -128,6 +128,7 @@
 
   <h3>Web development work</h3>
 
+
 <div id="carouselExampleIndicators carousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -136,13 +137,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-    <a href="https://sharp-minsky-ace9cf.netlify.app" target="_blank"><img src="/Photos/weather.png" class="d-block w-100" alt="New Wave Weather App"></a>
+    <a href="https://sharp-minsky-ace9cf.netlify.app" id="weather" target="_blank"><img src="/Photos/weather.png" class="d-block w-100" alt="New Wave Weather App"></a>
     </div>
     <div class="carousel-item">
-      <a href="https://heroic-fudge-9f13ea.netlify.app" target="_blank"> <img src="/Photos/whale.png" class="d-block w-100" alt="Atlantic Canada Project"></a>
+      <a href="https://heroic-fudge-9f13ea.netlify.app" id="whale" target="_blank"> <img src="/Photos/whale.png" class="d-block w-100" alt="Atlantic Canada Project"></a>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="..." class="d-block w-100" alt="Coming soon!">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -153,8 +154,9 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+  </div>
 </div>
-</div>
+
 
 
     <div class="contact">
@@ -204,5 +206,7 @@
     </div>
 
     <footer>Copyright 2022 Mandy Savoie</footer>
+   
   </body>
+ 
 </html>
