--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-     <script
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    
+
     <link rel="stylesheet" href="/style/style.css" />
     <script
       src="https://kit.fontawesome.com/af9f6ae742.js"
@@ -53,29 +53,35 @@
           <div class="col-lg-6">
             <h2 class="about-heading pt-3">About Mandy</h2>
             <div class="about-blurb">
-            <p>
-              I’m a freelance writer, editor and fact-checker based in Moncton,
-              New Brunswick, Canada. I write about travel, food and music. I’ve
-              also recently started working as a front-end web developer. <br /></p>
-              <p>Bylines include <i>WestJet Magazine</i>,
-              <i>Canadian Geographic Magazine</i>, mental_floss.com and more.
-              I've fact-checking magazines like <i>OnBoard</i>,
-              <i>This Magazine</i>, <i>Dementia Connections</i>,
-              <i>Leap Magazine</i> and others.
-            </p>
-            <p>
-              In my spare time, I write short fiction. I’ve been long-listed
-              twice in the Australian Writers’ Centre’s Furious Fiction
-              competition. I was also a finalist in NYC Midnight’s 2021 micro-fiction
-              contest. <br /></p>
+              <p>
+                I’m a freelance writer, editor and fact-checker based in
+                Moncton, New Brunswick, Canada. I write about travel, food and
+                music. I’ve also recently started working as a front-end web
+                developer. <br />
+              </p>
+              <p>
+                Bylines include <i>WestJet Magazine</i>,
+                <i>Canadian Geographic Magazine</i>, mental_floss.com and more.
+                I've fact-checking magazines like <i>OnBoard</i>,
+                <i>This Magazine</i>, <i>Dementia Connections</i>,
+                <i>Leap Magazine</i> and others.
+              </p>
+              <p>
+                In my spare time, I write short fiction. I’ve been long-listed
+                twice in the Australian Writers’ Centre’s Furious Fiction
+                competition. I was also a finalist in NYC Midnight’s 2021
+                micro-fiction contest. <br />
+              </p>
 
-              <p>I have a combined honours degree in Journalism and Music History
-              from the University of King’s College in Halifax, Nova Scotia.
-              <br /></p>
-                  <p>
-              When I’m not working, I’m travelling, baking, coding,
-              kickboxing or listening to new wave.</p>
-            </p>
+              <p>
+                I have a combined honours degree in Journalism and Music History
+                from the University of King’s College in Halifax, Nova Scotia.
+                <br />
+              </p>
+              <p>
+                When I’m not working, I’m travelling, baking, coding, kickboxing
+                or listening to new wave.
+              </p>
             </div>
           </div>
         </div>
@@ -83,81 +89,122 @@
     </div>
 
     <div class="writing-work">
-         <h3>Journalism Work</h3>
+      <h3>Journalism Work</h3>
 
-         <div class="container">
-           <div class="row">
-             <div class="col-lg-4 mb-5">
-<div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  
-  </div>
-</div>
-
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 mb-5">
+            <div class="card" style="width: 18rem">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+              </div>
             </div>
-<div class="col-lg-4 mb-5">
-<div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+          <div class="col-lg-4 mb-5">
+            <div class="card" style="width: 18rem">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+              </div>
+            </div>
+          </div>
 
-  </div>
-</div>
-</div>
-
-<div class="col-lg-4 mb-5">
-  <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
- 
-  </div>
-</div>
-</div>
-         </div>
+          <div class="col-lg-4 mb-5">
+            <div class="card" style="width: 18rem">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
+
+    <div class="web-work">
+      <h3>Web development work</h3>
+
+      <div
+        id="carouselExampleDark"
+        class="carousel carousel-dark slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <a href="https://sharp-minsky-ace9cf.netlify.app" target="_blank">
+              <img
+                src="/Photos/weather.png"
+                class="d-block w-100"
+                alt="New Wave Weather App"
+            /></a>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <a href="https://heroic-fudge-9f13ea.netlify.app" target="_blank">
+              <img
+                src="/Photos/whale.png"
+                class="d-block w-100"
+                alt="Atlantic Canada Landing Page"
+            /></a>
+          </div>
+          <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="..." />
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleDark"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleDark"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-   
-<div class="web-work">
-
-
-  <h3>Web development work</h3>
-
-
-<div id="carouselExampleIndicators carousel" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-    <a href="https://sharp-minsky-ace9cf.netlify.app" id="weather" target="_blank"><img src="/Photos/weather.png" class="d-block w-100" alt="New Wave Weather App"></a>
     </div>
-    <div class="carousel-item">
-      <a href="https://heroic-fudge-9f13ea.netlify.app" id="whale" target="_blank"> <img src="/Photos/whale.png" class="d-block w-100" alt="Atlantic Canada Project"></a>
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="Coming soon!">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-  </div>
-</div>
-
-
 
     <div class="contact">
       <h2>Contact Me</h2>
@@ -206,7 +253,5 @@
     </div>
 
     <footer>Copyright 2022 Mandy Savoie</footer>
-   
   </body>
- 
 </html>
