Added third image to carousel

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               </p>
               <p>
                 In my spare time, I write short fiction. I’ve been long-listed
-                twice in the Australian Writers’ Centre’s Furious Fiction
+                three times in the Australian Writers’ Centre’s Furious Fiction
                 competition. I was also a finalist in NYC Midnight’s 2021
                 micro-fiction contest. <br />
               </p>
@@ -182,7 +182,11 @@
             /></a>
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="..." />
+            <img
+              src="/Photos/soon.png"
+              class="d-block w-100"
+              alt="Coming soon!"
+            />
           </div>
         </div>
         <button
