--- a/work.html
+++ b/work.html
@@ -32,5 +32,19 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <h1>I do not think that word means what you think</h1>
+    <h2>Dictionary App - made with React</h2>
+    <h1 class="soon">Coming Soon!</h1>
+
+    <p>
+      <center>
+        Soon /soon/
+        <br />adverb <br />
+        1. in or after a short time.
+        <br />
+        "everyone will soon know the truth"
+      </center>
+    </p>
+  </body>
 </html>
