Added info to cards

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <img
               class="bio-pic img-fluid pt-3 pb-3"
               alt="Mandy Savoie headshot"
-              src="/Photos/mandy.jpg"
+              src="/photos/mandy.jpg"
             />
           </div>
           <div class="col-lg-6">
@@ -91,28 +91,38 @@
     <div class="writing-work">
       <h3>Journalism Work</h3>
 
-      <div class="container">
+      <div class="container card">
         <div class="row">
           <div class="col-lg-4 mb-5">
             <div class="card" style="width: 18rem">
-              <img src="..." class="card-img-top" alt="..." />
+              <img
+                src="/photos/belfast.jpg"
+                class="card-img-top"
+                alt="Titantic Museum in Belfast"
+              />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Three Days in Belfast</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Situated in the Emerald Isle’s northeast—just a two-hour drive
+                  from Dublin—Belfast is transforming itself into a must-visit
+                  destination.
                 </p>
               </div>
             </div>
           </div>
           <div class="col-lg-4 mb-5">
             <div class="card" style="width: 18rem">
-              <img src="..." class="card-img-top" alt="..." />
+              <img
+                src="/photos/injury.jpeg"
+                class="card-img-top"
+                alt="A LEGO woman in pieces"
+              />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Seven Music Video Injuries</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Before MTV debuted in 1981, music videos consisted of
+                  performance clips by British bands who couldn’t afford to tour
+                  America.
                 </p>
               </div>
             </div>
@@ -120,12 +130,16 @@
 
           <div class="col-lg-4 mb-5">
             <div class="card" style="width: 18rem">
-              <img src="..." class="card-img-top" alt="..." />
+              <img
+                src="/photos/boston.jpg"
+                class="card-img-top"
+                alt="Boston skyline"
+              />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Hidden Boston</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  One of the oldest cities in the United States, Boston features
+                  attractive architecture and many offbeat attractions.
                 </p>
               </div>
             </div>
@@ -165,25 +179,25 @@
           ></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="10000">
+          <div class="carousel-item active" data-bs-interval="10000000000">
             <a href="https://sharp-minsky-ace9cf.netlify.app" target="_blank">
               <img
-                src="/Photos/weather.png"
+                src="/photos/weather.png"
                 class="d-block w-100"
                 alt="New Wave Weather App"
             /></a>
           </div>
-          <div class="carousel-item" data-bs-interval="2000">
+          <div class="carousel-item" data-bs-interval="100000000">
             <a href="https://heroic-fudge-9f13ea.netlify.app" target="_blank">
               <img
-                src="/Photos/whale.png"
+                src="/photos/whale.png"
                 class="d-block w-100"
                 alt="Atlantic Canada Landing Page"
             /></a>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-bs-interval="10000000">
             <img
-              src="/Photos/soon.png"
+              src="/photos/soon.png"
               class="d-block w-100"
               alt="Coming soon!"
             />
