Added content to work page

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   <body>
     <div class="hero">
       <h1>Mandy Savoie</h1>
-      <h3>Freelance writer + editor + fact-checker + front-end developer</h3>
-      <h4>Based in New Brunswick, Canada</h4>
+      <h2>Freelance writer + editor + fact-checker + front-end developer</h2>
+      <h3>Based in New Brunswick, Canada</h3>
     </div>
 
     <div class="about">
@@ -89,7 +89,9 @@
     </div>
 
     <div class="writing-work">
-      <h3>Journalism Work</h3>
+      <h2 class="heading">
+        <a href="/work.html#journalism-work">Journalism Work</a>
+      </h2>
 
       <div class="container card">
         <div class="row">
@@ -149,7 +151,9 @@
     </div>
 
     <div class="web-work">
-      <h3>Web development work</h3>
+      <h2 class="heading">
+        <a href="/work.html#web-work">Web development work</a>
+      </h2>
 
       <div
         id="carouselExampleDark"
