--- a/work.html
+++ b/work.html
@@ -33,18 +33,92 @@
     />
   </head>
   <body>
-    <h1>I do not think that word means what you think</h1>
-    <h2>Dictionary App - made with React</h2>
-    <h1 class="soon">Coming Soon!</h1>
+    <h1>Mandy's work</h1>
+    <br />
+    <div class="journalism-work">
+      <br />
+      <h2 class="heading">Journalism</h2>
 
-    <p>
-      <center>
-        Soon /soon/
-        <br />adverb <br />
-        1. in or after a short time.
-        <br />
-        "everyone will soon know the truth"
-      </center>
-    </p>
+      <div class="container card">
+        <div class="row">
+          <div class="col-lg-4 mb-4 mt-4">
+            <div class="card" style="width: 18rem">
+              <img
+                src="/photos/belfast.jpg"
+                class="card-img-top"
+                alt="Titantic Museum in Belfast"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Three Days in Belfast</h5>
+                <p class="card-text">
+                  Situated in the Emerald Isle’s northeast—just a two-hour drive
+                  from Dublin—Belfast is transforming itself into a must-visit
+                  destination.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4 mt-4">
+            <div class="card" style="width: 18rem">
+              <img
+                src="/photos/injury.jpeg"
+                class="card-img-top"
+                alt="A LEGO woman in pieces"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Seven Music Video Injuries</h5>
+                <p class="card-text">
+                  Before MTV debuted in 1981, music videos consisted of
+                  performance clips by British bands who couldn’t afford to tour
+                  America.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 mb-4 mt-4">
+            <div class="card" style="width: 18rem">
+              <img
+                src="/photos/boston.jpg"
+                class="card-img-top"
+                alt="Boston skyline"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Hidden Boston</h5>
+                <p class="card-text">
+                  One of the oldest cities in the United States, Boston features
+                  attractive architecture and many offbeat attractions.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <p>
+          <button
+            class="btn btn-primary more-button"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseExample"
+            aria-expanded="false"
+            aria-controls="collapseExample"
+          >
+            More
+          </button>
+        </p>
+        <div class="collapse" id="collapseExample">
+          <div class="card card-body">
+            Some placeholder content for the collapse component. This panel is
+            hidden by default but revealed when the user activates the relevant
+            trigger.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="web-work-page">
+      <h2 class="heading">Front-end projects</h2>
+    </div>
+    <footer>Copyright 2022 Mandy Savoie</footer>
   </body>
 </html>
