Added content and button JS to work page

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
     <div class="web-work">
       <h2 class="heading">
-        <a href="/work.html#web-work">Web development work</a>
+        <a href="/work.html#web-work-page">Web development work</a>
       </h2>
 
       <div
