--- a/work.html
+++ b/work.html
@@ -20,6 +20,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+
     <link rel="stylesheet" href="/style/style.css" />
     <script
       src="https://kit.fontawesome.com/af9f6ae742.js"
@@ -108,17 +109,103 @@
         </p>
         <div class="collapse" id="collapseExample">
           <div class="card card-body">
-            Some placeholder content for the collapse component. This panel is
-            hidden by default but revealed when the user activates the relevant
-            trigger.
+            <div class="container card">
+              <div class="row">
+                <div class="col-lg-4 mb-4 mt-4">
+                  <div class="card" style="width: 18rem">
+                    <img
+                      src="/photos/paris.jpg"
+                      class="card-img-top"
+                      alt="Paris at night"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Paris on a Budget</h5>
+                      <p class="card-text">
+                        A trip to Paris doesn’t have to break the bank. Here’s
+                        how to do it all on a budget in the City of Lights.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 mb-4 mt-4">
+                  <div class="card" style="width: 18rem">
+                    <img
+                      src="/photos/randy.jpg"
+                      class="card-img-top"
+                      alt="Platter of pierogies"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">
+                        Randy Bachman Takes Care of Business
+                      </h5>
+                      <p class="card-text">
+                        Who’d have thought pierogies could lead to the creation
+                        of one of Canada’s greatest anthems?
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-4 mb-4 mt-4">
+                  <div class="card" style="width: 18rem">
+                    <img
+                      src="/photos/disney.jpg"
+                      class="card-img-top"
+                      alt="Cinderella's Castle at Magic Kingdom"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Keys to the Kingdom</h5>
+                      <p class="card-text">
+                        This five-hour behind-the-scenes tour of WDW's Magic
+                        Kingdom is one of the few things at the amusement park
+                        not for kids.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <p>
+                <button
+                  class="btn btn-primary less-button"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseExample"
+                  aria-expanded="false"
+                  aria-controls="collapseExample"
+                >
+                  Less
+                </button>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="web-work-page">
+        <h2 class="heading">Front-end web projects</h2>
+
+        <div class="container">
+          <div class="row">
+            <div class="col d-none d-lg-block">
+              <img
+                src="/photos/weather.png"
+                alt="New Wave Weather App"
+                class="img-fluid"
+              />
+            </div>
+            <div class="col">
+              <h3>New Wave Weather App</h3>
+              <p>Built with HTML, CSS and Javascript.</p>
+              <a href="https://sharp-minsky-ace9cf.netlify.app" target="_blank"
+                >New Wave Weather App</a
+              >
+            </div>
           </div>
         </div>
       </div>
     </div>
-
-    <div class="web-work-page">
-      <h2 class="heading">Front-end projects</h2>
-    </div>
     <footer>Copyright 2022 Mandy Savoie</footer>
+    <script src="/style/java.js" ;></script>
   </body>
 </html>
