Added styling to journalism work section

--- a/work.html
+++ b/work.html
@@ -108,7 +108,8 @@
           </button>
         </p>
         <div class="collapse" id="collapseExample">
-          <div class="card card-body">
+       
+
             <div class="container card">
               <div class="row">
                 <div class="col-lg-4 mb-4 mt-4">
@@ -122,7 +123,7 @@
                       <h5 class="card-title">Paris on a Budget</h5>
                       <p class="card-text">
                         A trip to Paris doesn’t have to break the bank. Here’s
-                        how to do it all on a budget in the City of Lights.
+                        how to stay, play, eat and shop on a budget in the City of Lights.
                       </p>
                     </div>
                   </div>
@@ -181,6 +182,8 @@
           </div>
         </div>
       </div>
+
+    
 
       <div class="web-work-page">
         <h2 class="heading">Front-end web projects</h2>
