Added button to web work section

--- a/work.html
+++ b/work.html
@@ -26,12 +26,9 @@
       src="https://kit.fontawesome.com/af9f6ae742.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Permanent+Marker&display=swap"
-      rel="stylesheet"
-    />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,700;1,200&family=Permanent+Marker&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Mandy's work</h1>
@@ -100,14 +97,14 @@
             class="btn btn-primary more-button"
             type="button"
             data-bs-toggle="collapse"
-            data-bs-target="#collapseExample"
+            data-bs-target="#collapseJournalism"
             aria-expanded="false"
             aria-controls="collapseExample"
           >
             More
           </button>
         </p>
-        <div class="collapse" id="collapseExample">
+        <div class="collapse" id="collapseJournalism">
        
 
             <div class="container card">
@@ -171,7 +168,7 @@
                   class="btn btn-primary less-button"
                   type="button"
                   data-bs-toggle="collapse"
-                  data-bs-target="#collapseExample"
+                  data-bs-target="#collapseJournalism"
                   aria-expanded="false"
                   aria-controls="collapseExample"
                 >
@@ -190,7 +187,7 @@
 
         <div class="container">
           <div class="row">
-            <div class="col d-none d-lg-block">
+            <div class="col d-none d-lg-block mb-4">
               <img
                 src="/photos/weather.png"
                 alt="New Wave Weather App"
@@ -203,6 +200,21 @@
               <a href="https://sharp-minsky-ace9cf.netlify.app" target="_blank"
                 >New Wave Weather App</a
               >
+                 <p>
+          <button
+            class="btn btn-primary more-button"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseWeb"
+            aria-expanded="false"
+            aria-controls="collapseExample"
+          >
+            More
+          </button>
+        </p>
+        <div class="collapse" id="collapseWeb">
+          HELLO EVERYONE!
+              </div>
             </div>
           </div>
         </div>
