--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Permanent+Marker&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,700;1,200&family=Permanent+Marker&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -152,7 +152,7 @@
 
     <div class="web-work">
       <h2 class="heading">
-        <a href="/work.html#web-work-page">Web development work</a>
+        <a href="/work.html#web-work-page">Front-end development</a>
       </h2>
 
       <div
