Added content to web work section

--- a/work.html
+++ b/work.html
@@ -26,9 +26,12 @@
       src="https://kit.fontawesome.com/af9f6ae742.js"
       crossorigin="anonymous"
     ></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,700;1,200&family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,700;1,200&family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h1>Mandy's work</h1>
@@ -105,121 +108,162 @@
           </button>
         </p>
         <div class="collapse" id="collapseJournalism">
-       
-
-            <div class="container card">
-              <div class="row">
-                <div class="col-lg-4 mb-4 mt-4">
-                  <div class="card" style="width: 18rem">
-                    <img
-                      src="/photos/paris.jpg"
-                      class="card-img-top"
-                      alt="Paris at night"
-                    />
-                    <div class="card-body">
-                      <h5 class="card-title">Paris on a Budget</h5>
-                      <p class="card-text">
-                        A trip to Paris doesn’t have to break the bank. Here’s
-                        how to stay, play, eat and shop on a budget in the City of Lights.
-                      </p>
-                    </div>
+          <div class="container card">
+            <div class="row">
+              <div class="col-lg-4 mb-4 mt-4">
+                <div class="card" style="width: 18rem">
+                  <img
+                    src="/photos/paris.jpg"
+                    class="card-img-top"
+                    alt="Paris at night"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Paris on a Budget</h5>
+                    <p class="card-text">
+                      A trip to Paris doesn’t have to break the bank. Here’s how
+                      to stay, play, eat and shop on a budget in the City of
+                      Lights.
+                    </p>
                   </div>
                 </div>
-                <div class="col-lg-4 mb-4 mt-4">
-                  <div class="card" style="width: 18rem">
-                    <img
-                      src="/photos/randy.jpg"
-                      class="card-img-top"
-                      alt="Platter of pierogies"
-                    />
-                    <div class="card-body">
-                      <h5 class="card-title">
-                        Randy Bachman Takes Care of Business
-                      </h5>
-                      <p class="card-text">
-                        Who’d have thought pierogies could lead to the creation
-                        of one of Canada’s greatest anthems?
-                      </p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-lg-4 mb-4 mt-4">
-                  <div class="card" style="width: 18rem">
-                    <img
-                      src="/photos/disney.jpg"
-                      class="card-img-top"
-                      alt="Cinderella's Castle at Magic Kingdom"
-                    />
-                    <div class="card-body">
-                      <h5 class="card-title">Keys to the Kingdom</h5>
-                      <p class="card-text">
-                        This five-hour behind-the-scenes tour of WDW's Magic
-                        Kingdom is one of the few things at the amusement park
-                        not for kids.
-                      </p>
-                    </div>
+              </div>
+              <div class="col-lg-4 mb-4 mt-4">
+                <div class="card" style="width: 18rem">
+                  <img
+                    src="/photos/randy.jpg"
+                    class="card-img-top"
+                    alt="Platter of pierogies"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      Randy Bachman Takes Care of Business
+                    </h5>
+                    <p class="card-text">
+                      Who’d have thought pierogies could lead to the creation of
+                      one of Canada’s greatest anthems?
+                    </p>
                   </div>
                 </div>
               </div>
 
-              <p>
-                <button
-                  class="btn btn-primary less-button"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#collapseJournalism"
-                  aria-expanded="false"
-                  aria-controls="collapseExample"
-                >
-                  Less
-                </button>
-              </p>
+              <div class="col-lg-4 mb-4 mt-4">
+                <div class="card" style="width: 18rem">
+                  <img
+                    src="/photos/disney.jpg"
+                    class="card-img-top"
+                    alt="Cinderella's Castle at Magic Kingdom"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Keys to the Kingdom</h5>
+                    <p class="card-text">
+                      This five-hour behind-the-scenes tour of WDW's Magic
+                      Kingdom is one of the few things at the amusement park not
+                      for kids.
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
+
+            <p>
+              <button
+                class="btn btn-primary less-button"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseJournalism"
+                aria-expanded="false"
+                aria-controls="collapseExample"
+              >
+                Less
+              </button>
+            </p>
           </div>
         </div>
       </div>
+    </div>
 
-    
+    <div class="web-work-page" id="web-work-page">
+      <h2 class="heading">Front-end web projects</h2>
 
-      <div class="web-work-page">
-        <h2 class="heading">Front-end web projects</h2>
-
-        <div class="container">
-          <div class="row">
-            <div class="col d-none d-lg-block mb-4">
-              <img
-                src="/photos/weather.png"
-                alt="New Wave Weather App"
-                class="img-fluid"
-              />
-            </div>
-            <div class="col">
-              <h3>New Wave Weather App</h3>
-              <p>Built with HTML, CSS and Javascript.</p>
-              <a href="https://sharp-minsky-ace9cf.netlify.app" target="_blank"
-                >New Wave Weather App</a
+      <div class="container">
+        <div class="row">
+          <div class="col d-none d-lg-block mb-4">
+            <img
+              src="/photos/weather.png"
+              alt="New Wave Weather App"
+              class="img-fluid"
+            />
+          </div>
+          <div class="col">
+            <br />
+            <h3>New Wave Weather App</h3>
+            <p class="work-web-paragraph">
+              Built with HTML, CSS and Javascript.<br />
+              Don't be an airhead! Head back to a time of New Coke and catch up
+              on the weather with all your favourite 80's new wave artists.
+            </p>
+            <a
+              href="https://sharp-minsky-ace9cf.netlify.app"
+              target="_blank"
+              class="work-web-link"
+              >New Wave Weather App</a
+            >
+            <p>
+              <button
+                class="btn btn-primary web-more-button"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseWeb"
+                aria-expanded="false"
+                aria-controls="collapseExample"
               >
-                 <p>
-          <button
-            class="btn btn-primary more-button"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapseWeb"
-            aria-expanded="false"
-            aria-controls="collapseExample"
-          >
-            More
-          </button>
-        </p>
-        <div class="collapse" id="collapseWeb">
-          HELLO EVERYONE!
+                More
+              </button>
+            </p>
+          </div>
+          <div class="collapse" id="collapseWeb">
+            <div class="row">
+              <div class="col d-none d-lg-block mb-4">
+                <img
+                  src="/photos/whale.png"
+                  alt="Atlantic Canada landing page"
+                  class="img-fluid"
+                />
+              </div>
+              <div class="col">
+                <br />
+                <h3>Atlantic Canada Landing Page</h3>
+                <p class="work-web-paragraph">
+                  Built with HTML, CSS and Javascript.<br />
+                  Discover why the four Atlantic provinces in Canada are your
+                  next dream destination.
+                </p>
+                <a
+                  href="https://heroic-fudge-9f13ea.netlify.app"
+                  target="_blank"
+                  class="work-web-link"
+                  >Atlantic Canada Landing Page</a
+                >
+                <br />
+                <p>
+                  <button
+                    class="btn btn-primary web-less-button"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseWeb"
+                    aria-expanded="false"
+                    aria-controls="collapseExample"
+                  >
+                    Less
+                  </button>
+                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
     <footer>Copyright 2022 Mandy Savoie</footer>
     <script src="/style/java.js" ;></script>
   </body>
