Styled work page buttons

--- a/work.html
+++ b/work.html
@@ -98,6 +98,7 @@
         <p>
           <button
             class="btn btn-primary more-button"
+            id="moreButton"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#collapseJournalism"
@@ -167,7 +168,8 @@
 
             <p>
               <button
-                class="btn btn-primary less-button"
+                class="btn btn-primary more-button"
+                id="lessButton"
                 type="button"
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseJournalism"
@@ -187,7 +189,7 @@
 
       <div class="container">
         <div class="row">
-          <div class="col d-none d-lg-block mb-4">
+          <div class="col d-none d-lg-block mb-5">
             <img
               src="/photos/weather.png"
               alt="New Wave Weather App"
@@ -211,6 +213,7 @@
             <p>
               <button
                 class="btn btn-primary web-more-button"
+                id="webMoreButton"
                 type="button"
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseWeb"
@@ -244,10 +247,11 @@
                   class="work-web-link"
                   >Atlantic Canada Landing Page</a
                 >
-                <br />
+
                 <p>
                   <button
-                    class="btn btn-primary web-less-button"
+                    class="btn btn-primary web-more-button"
+                    id="webLessButton"
                     type="button"
                     data-bs-toggle="collapse"
                     data-bs-target="#collapseWeb"
